docs: Update documentation and centralize benchmark infrastructure
Major changes:
- Update all documentation to reflect current FsJctoolsCircuit implementation
- Document 24+ Serventis instruments across 7 categories (was 12)
- Add lazy thread initialization details and benchmark impact
- Fix outdated diagrams and class references (Fs prefix naming)
- Update benchmark comparison with 150 tests across 10 groups

Infrastructure:
- Add centralized scripts/benchmark.sh and scripts/tck.sh
- Add scripts/generate-comparison.py for benchmark comparison tables
- Add /tck slash command for running TCK tests
- Simplify all 12 benchmark slash commands to use central script
- Add maven-dependency-plugin for classpath management

Cleanup:
- Remove duplicate JMH benchmark copies (use Humainary's JMH jar)
- Remove old circuit implementations (FsSimpleCircuit, FsExperimentalCircuit)
- Remove stale result files and scattered scripts
- Add substrates-api-java to .gitignore (cloned dependency)

Key optimizations documented:
- Lazy thread start: -97% to -100% on await benchmarks
- JCTools MPSC queue: wait-free producer path
- Cached path generation: -96% on name_path_generation
- Identity-based name comparison: -89% on name_compare

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>