@@ -6,44 +6,12 @@ description: Run PipeOps JMH benchmarks comparing Fullerstack vs Humainary
 
 Run PipeOps JMH benchmarks comparing Fullerstack vs Humainary implementation.
 
-## Configuration
-
-- **Results Directory:** `/workspaces/fullerstack-humainary/benchmark-results/`
-- **Circuit Type:** Set via `-Dfullerstack.circuit.type=` (experimental, base, valve, ring, optimized, turbo, inline, ultra)
-- **Default Circuit:** experimental
-
 ## Steps
 
-1. Build and run PipeOps benchmarks with results saved to file:
+1. Run the benchmark script:
 
 ```bash
-source /usr/local/sdkman/bin/sdkman-init.sh && sdk use java 25.0.1-open
-
-CIRCUIT_TYPE="${CIRCUIT_TYPE:-experimental}"
-TIMESTAMP=$(date +%Y%m%d-%H%M%S)
-RESULTS_DIR="/workspaces/fullerstack-humainary/benchmark-results"
-mkdir -p "${RESULTS_DIR}"
-JSON_FILE="${RESULTS_DIR}/pipeops-${CIRCUIT_TYPE}-${TIMESTAMP}.json"
-TXT_FILE="${RESULTS_DIR}/pipeops-${CIRCUIT_TYPE}-${TIMESTAMP}.txt"
-
-mvn -f /workspaces/fullerstack-humainary/substrates-api-java/pom.xml clean install -DskipTests -q
-mvn -f /workspaces/fullerstack-humainary/fullerstack-substrates/pom.xml clean install -DskipTests -q
-mvn -f /workspaces/fullerstack-humainary/substrates-api-java/jmh/pom.xml clean package -DskipTests -q \
-  -Dsubstrates.spi.groupId=io.fullerstack \
-  -Dsubstrates.spi.artifactId=fullerstack-substrates \
-  -Dsubstrates.spi.version=1.0.0-SNAPSHOT
-
-java --enable-preview \
-  -Dfullerstack.circuit.type=${CIRCUIT_TYPE} \
-  -jar /workspaces/fullerstack-humainary/substrates-api-java/jmh/target/humainary-substrates-jmh-1.0.0-PREVIEW-jar-with-dependencies.jar \
-  -f 1 -wi 2 -i 3 -t 1 \
-  -rf json -rff "${JSON_FILE}" \
-  "PipeOps" 2>&1 | tee "${TXT_FILE}"
-
-echo ""
-echo "Results saved to:"
-echo "  JSON: ${JSON_FILE}"
-echo "  Text: ${TXT_FILE}"
+/workspaces/fullerstack-humainary/scripts/benchmark.sh PipeOps
 ```
 
 2. Present comparison table using Humainary baselines from BENCHMARKS.md:
@@ -64,5 +32,6 @@ echo "  Text: ${TXT_FILE}"
 | pipe_create_chained | 0.86 | X | X% | ? |
 | pipe_create_with_flow | 13.2 | X | X% | ? |
 
-**Circuit Type:** ${CIRCUIT_TYPE}
 **Summary:** X/13 Fullerstack wins, X/13 Humainary wins
+
+Diff = ((Fullerstack - Humainary) / Humainary * 100). Winner = lower time (faster).
